kubernetes/k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s
spec:
  selector:
    app: k8s
  type: LoadBalancer
  ports:
    - port: 3001
      targetPort: 3001

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s
spec:
  selector:
    matchLabels:
      app: k8s
  replicas: 3
  template:
    metadata:
      labels:
        app: k8s
    spec:
      containers:
        - name: k8s
          image: arijititobuz/kubernetes:3.0.0
          imagePullPolicy: Always
          resources:
            limits:
              memory: '256Mi'
              cpu: '250m'
          ports:
            - containerPort: 3001
